# conveyer

./: .gitignore  README.md  RELEASING.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
prompts/: _system.md  exploration.md  implementation.md  planning.md  quick-review.md  review.md  submit.md
scripts/: release.sh  stage-copilot.sh
sidecar/: conveyer-agent.mjs
src/: App.tsx  api.ts  autoRefresh.ts  errors.ts  focusRefresh.ts  main.tsx  modelsCache.ts  notificationInbox.ts  runNotifications.ts  scrollRestoration.ts  settingsBus.ts  theme.tsx  types.ts  updater.ts  useNativeContextMenu.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  macos.rs  main.rs  models.rs  session_runner.rs  state.rs  worktree.rs
src-tauri/src/ado/: auth.rs  mod.rs
src-tauri/src/commands/: comments.rs  diff.rs  gates.rs  mod.rs  pull_requests.rs  runs.rs  sessions.rs  settings.rs  sources.rs  tasks.rs  workspaces.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_auth.sql  0003_hierarchy.sql  0004_buckets.sql  0005_worktree.sql  0006_workspaces.sql  0007_local_source.sql  0008_review_verdict.sql  0009_sdk_session_id.sql  0010_pending_input.sql  0011_comments.sql  0012_comment_thread.sql  0013_pull_requests.sql  0014_base_branch.sql  0015_task_overrides.sql
src-tauri/src/github/: auth.rs  mod.rs
src/components/: CommentThread.tsx  DiffViewer.tsx  EmptyState.tsx  Layout.tsx  Modal.tsx  ModelDropdown.tsx  NotificationBell.tsx  PhaseArtifact.tsx  PhaseChat.tsx  PromptView.tsx  PullRequestView.tsx  ReasoningDropdown.tsx  RichText.tsx  RunPanel.tsx  StateChip.tsx  StatusBadge.tsx  SubSection.tsx  TabPlaceholder.tsx  TabStrip.tsx  (+6 more)
(+4 files in other folders)
